--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -22,7 +22,7 @@
 *[[Portuguese]]: [[]]
 *[[Russian]]: [[]]
 *[[Spanish]]: [[]] ''''
-*[[Swedish]]: [[]]
+*[[Swedish]]: [[annons]]
 *[[Tupinambá]]: [[]]
 *[[Turkish]]: [[]]
 *[[Welsh]]: [[]]
