--- a/en/a/abandonar.4113.wikitext
+++ b/en/a/abandonar.4113.wikitext
@@ -1,3 +1,4 @@
 == [[verb]] ==
-# Interlingua for ''' '' to [[abandon]] '' '''; 
-#''' abandonar se a ''' means ''' ''to [[indulge]] in'' '''.
+# [[Interlingua]] for ''to [[abandon]]''; 
+# ''abandonar se'' a means ''to [[indulge]] in''.
+# [[Portuguese]] for ''to [[abandon]]'';
