--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -18,7 +18,7 @@
 *[[Korean]]: [[]]
 *[[Latin]]: [[]]
 *[[Polish]]: [[]]
-*[[Portuguese]]: [[]]
+*[[Portuguese]]: [[ajusto]] ''m'' (or is it ''ajuste''?)
 *[[Russian]]: [[]]
 *[[Spanish]]: [[]] ''''
 *[[Swedish]]: [[]]
