added ia, changed pt <adjustment#12033>

--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -12,13 +12,13 @@
 *[[Guarani]]: [[]]
 *[[Hebrew]]: [[]]
 *[[Hungarian]]: [[]]
-*[[Interlingua]]: [[]]
+*[[Interlingua]]: [[adjustamento]]
 *[[Italian]]: [[]] ''''
 *[[Japanese]]: []]
 *[[Korean]]: [[]]
 *[[Latin]]: [[]]
 *[[Polish]]: [[]]
-*[[Portuguese]]: [[ajusto]] ''m'' (or is it ''ajuste''?)
+*[[Portuguese]]: [[ajustamento]] ''m'', [[ajusto]] ''m'' (or is it ''ajuste''?)
 *[[Russian]]: [[]]
 *[[Spanish]]: [[]] ''''
 *[[Swedish]]: [[]]
