--- a/en/ι/ιταλικός.4256.wikitext
+++ b/en/ι/ιταλικός.4256.wikitext
@@ -13,12 +13,12 @@
 
 === [[other]] [[language|languages]] ===
 
-*[[Esperanto]]: ''[[itala]]''
-*[[French]]: ''[[italien]]''
-*[[German]]: ''[[italienisch]]''
-*[[Polish]]: ''[[włoski]]''
-*[[Russian]]: ''[[италянский]]''
-*[[Serbian]] and [[Croatian]]: ''[[talijanski]]''
-*[[Slovene]]: ''[[italijanski]]''
-*[[Spanish]]: ''[[italiano]]''
-*[[Swedish]]: ''[[italienisk]]''
+*[[Esperanto]]: [[itala]]
+*[[French]]: [[italien]] ''m'', [[italienne]] ''f''
+*[[German]]: [[italienisch]]
+*[[Polish]]: [[włoski]]
+*[[Russian]]: [[италянский]]
+*[[Serbian]] and [[Croatian]]: [[talijanski]]
+*[[Slovene]]: [[italijanski]]
+*[[Spanish]]: [[italiano]]
+*[[Swedish]]: [[italienisk]]
