--- a/en/p/POW.4325.wikitext
+++ b/en/p/POW.4325.wikitext
@@ -4,7 +4,7 @@
  
 === Translations ===
 *[[Dutch]]: [[krijgsgevangene]]
-*[[German]]: [[Kriegsgefangener]]
+*[[German]]: [[Kriegsgefangener]] ''m''
 *[[Interlingua]]: [[prisionero de guerra]] 
 *[[Italian]]: [[prigioniero di guerra]]
 *[[Norwegian]]: [[fange av krig]]
