--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -19,7 +19,7 @@
 *[[Guarani]]: [[]]
 *[[Hebrew]]: [[]]
 *[[Hungarian]]: [[hirdetés]], [[reklám]]
-*[[Indonesian]]: [[iklan]]
+*[[Indonesian]]: [[iklan]], [[reklame]]
 *[[Interlingua]]: [[annuncio]], [[publicitate]], [[reclamo]], [[propaganda]]
 *[[Italian]]: [[annuncio]] ''m'', [[pubblicità]] ''f''
 *[[Japanese]]: [[広告]] ([[こうこく]], kōkoku), [[CM]] ([[シーエム]], shī-emu)
