--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -10,3 +10,5 @@
 
 === Translations ===
 *[[Dutch]]: [[bloeden]]
+*[[Indonesian]]: [[darah|berdarah]], [[keluar|mengeluarkan]] [[darah]], [[kucur|mengucurkan]] [[darah]], [[alir|mengalirkan]] [[darah]] 
+*[[Japanese]]: [[出血]]する ([[しゅっけつ]]する, shukketsu-suru), [[血]]を[[流す]] ([[ち]]を[[ながす]], chi-wo-nagasu)
