--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -11,3 +11,5 @@
 
 === Translations ===
 *[[Dutch]]: [[blazen]], [[opblazen]]
+*[[Indonesian]]: [[tiup|meniup]], [[ledak|meledakkan]]
+*[[Japanese]]: [[吹く]] ([[ふく]], fuku), [[爆発]]する ([[ばくはつ]]する, bakuhatsu-suru)
