id, ja <blew#108209>

--- a/en/b/blew.6804.wikitext
+++ b/en/b/blew.6804.wikitext
@@ -10,6 +10,8 @@
 
 === Translations ===
 *[[Dutch]]: [[blies]]
+*[[Indonesian]]: [[tiup|meniup]], [[ledak|meledakkan]]
+*[[Japanese]]: [[吹いた]] ([[ふいた]], fuita), [[爆発]]した ([[ばくはつ]]した, bakuhatsu-shita)
 
 === Homophones ===
 
