id, ja <bend#33517>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -10,3 +10,5 @@
 
 === Translations ===
 *[[Dutch]]: [[buigen]], [[plooien]]
+*[[Indonesian]]: [[bengkok|membengkokkan]], [[belok|membelokkan]], [[tekuk|menekuk]]
+*[[Japanese]]: [[曲げる]] ([[まげる]], mageru)
