id, ja <bet#15530>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -12,6 +12,8 @@
 
 === Translations ===
 *[[Dutch]]: [[gokken]] (1), [[van op aan kunnen]] (2), [[er op kunnen rekenen]] (2)
+*[[Indonesian]]: [[taruh|bertaruh]], [[taruh|mempertaruhkan]] (1)
+*[[Japanese]]: [[賭ける]] ([[かける]], kakeru) (1)
 
 === Verb ===
 
