--- a/en/m/mouflon.8242.wikitext
+++ b/en/m/mouflon.8242.wikitext
@@ -33,7 +33,7 @@
 *[[Indonesian]]: [[]]
 *[[Irish]]: [[]]
 *[[Italian]]: [[muflone]] ''m''
-*[[Japanese]]: [[]] ([[]], )
+*[[Japanese]]: [[ムフロン]] (mufuron)
 *[[Ladin]]: [[muflon]]
 *[[Latin]]: [[Ovis aries musimon]] '' ''
 *[[Latvian]]: [[muflons]]
