--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -16,6 +16,7 @@
 *[[Finnish]]: [[silloin]] (1), [[sitten]] (2, 3), [[niin]] (4), [[toisaalta]] (5)
 *[[Indonesian]]: [[maka]] (if-then), [[kemudian]], [[lalu]], [[setelah itu]], [[selanjutnya]], [[berikutnya]]
 *[[Japanese]]: [[それから]] (sorekara), [[その後]] (sono ato, sono go), [[次]] ([[つぎ]], tsugi)
+*[[Portuguese]]: [[então]]
 
 ===Noun===
 #that time.
@@ -23,3 +24,4 @@
 
 === Translations ===
 *[[Finnish]]: [[silloin]]
+*[[Portuguese]]: [[então]]
