4 Corner: Christian Wittern & Urs App; Cangjie: www.chinesecj.com; Others: Unihan database <月#23531>

--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -1,6 +1,6 @@
-''This entry needs to be changed into the format of the template: [[Wiktionary:Entries on Chinese characters]].''
+* '''[[Wiktionary:Chinese radical index| Radical]] Number 74''': [[Wiktionary:Chinese radical index 月|月]]+0 stroke
 
-----
+* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 4|4]]
 
 *'''Stroke order'''
 *# The left-most sloping vertical stroke is done from top to bottom.
@@ -8,57 +8,74 @@
 *# The middle horizontal line is done from left to right.
 *# The bottom horizontal line is done from left to right.
 
-*'''Common meanings'''
-*#[[Moon]]
-*#[[Month]]
+* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 7722<sub>0</sub>
 
+* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 月 (B)
+
+* '''Graphical Significance and Origin''': 
+
+* '''Common Meaning'''
+*# [[moon]]
+*# [[month]]
+*# KangXi radical 74 [[Wiktionary:Chinese radical index 月|月]]
 
 ----
 
-== Chinese [[Hanzi]] ==
-
-* '''Pronunciation''': [YUE] <small>''(in SAMPA?)''</small>
-*: ''For an example of a character with multiple pronunciations (and hence Romanizations), see the section "Pronounciation & Definition" in [[Wiktionary talk:Entries on Chinese characters | Talk]]''
+== [[Chinese]] [[Hanzi]] ==
 
 * '''Romanizations'''
-** [[Mandarin]]:
-*** '''[[Pinyin]]''':  Yue4
-*** '''[[Wade-Giles]]''': 
+** '''[[Mandarin]]'''
+*** '''[[Pinyin]]''': yuè (yue4)
+*** '''[[Wade-Giles]]''': yüeh<sup>4</sup>
 *** '''[[Yale]]''': 
-** [[Cantonese]]:
-*** '''[[Jyutping]]''':  
-*** '''[[Penkyamp]]''':  
-*** '''[[Yale]]''': 
+** '''[[Cantonese]]'''
+*** '''[[Jyutping]]''':
+*** '''[[Penkyamp]]''': 
+*** '''[[Yale]]''': yut6
+
+* '''Other info''': 
+
+<!--
+For an example of a character with multiple pronunciations (and hence Romanizations), see the section "Pronounciation & Definition" in [[Wiktionary talk:Entries on Chinese characters | Talk]]
+-->
 
 ----
 
-== Japanese [[Kanji]] ==
+== [[Japanese]] [[Kanji]] ==
 
-*'''Readings'''
-**'''[[On]]''': [[げつ]]　(getsu), [[がつ]]　(gatsu)
-**'''[[Kun]]''':　[[つき]] (tsuki)
+* '''Readings'''
+** '''[[On]]''': [[げつ]] (getsu), [[がつ]] (gatsu)
+** '''[[Kun]]''': [[つき]] (tsuki)
 
-*'''Other information''': tsuki is moon, getsu is month, gatsu is the counter for months of the year, ([[&#20845]]&#26376 is June).
-
-----
-
-==Translations==
-*[[Catalan]]: (1) [[lluna]] ''f'', (2) [[mes]] m (plural:mesos)
-*[[Chinese]]: [[月]]
-*[[Dutch]]: (1) [[maan]] ''f'', (2) [[maand]] f
-*[[English]]: [[month]] ([[がつ]], gatsu)
-*[[Finnish]]: [[kuukausi]] ([[kuu]] when preceded by a modifier, e.g. ''ensi kuussa = next month'')
-*[[French]]: (1) [[lune]] ''f'', (2) [[mois]] m
-*[[German]]: (1) [[Mond]] ''m'', (2) [[Monat]] m
-*[[Hebrew]]: [[חודש]]
-*[[Indonesian]]: [[bulan]]
-*[[Polish]]: (1) [[księżyc]], (2) [[miesiąc]]
-*[[Portuguese]]: (1) [[lua]] ''f'', (2) [[mês]] ''m''
-*[[Spanish]]: (1) [[luna]] ''f'', (2) [[mes]] m (plural: meses)
+* '''Other info''': tsuki is moon, getsu is month, gatsu is the counter for months of the year, ([[&#20845]]&#26376 is June).
 
 ----
 
-==Technical Information==
-*'''Unicode'''
-**Hex: 6708
-**Decimal: 26376
+== [[Korean]] [[Hanja]] ==
+
+* '''[[Hangeul]]''': 월
+
+* '''[[Eumhun]] reading''': 
+
+* '''Romanizations'''
+** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': wol
+** '''[[McCune-Reischauer]]''': wŏl
+** '''[[Yale]]''': wel
+
+----
+
+== Dictionary Information ==
+
+* KangXi: 0504.190
+* Morobashi: 14330
+* Dae Jaweon: 0879.200
+* Hanyu Da Zidian: 32041.010
+
+== Technical Information ==
+
+* '''Unicode''':
+** Hex: 6708
+** Decimal: 26376
+* '''Big5''':
+** Hex: A4EB
+** Decimal: 42219
