--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -47,7 +47,7 @@ For an example of a character with multiple pronunciations (and hence Romanizati
 ** '''[[On]]''': [[げつ]] (getsu), [[がつ]] (gatsu)
 ** '''[[Kun]]''': [[つき]] (tsuki)
 
-* '''Other info''': tsuki is moon, getsu is month, gatsu is the counter for months of the year, ([[&#20845]]&#26376 is June).
+* '''Other info''': tsuki is moon, getsu is month, gatsu is the counter for months of the year, ([[&#20845;]]&#26376 is June).
 
 ----
 
