--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -5,7 +5,7 @@
 
 '''rabbit'''
 
-# [[animal]], more specifically [[rodent]], generalized as a hopping rodent that eats grass and carrots. See also [hare], [jackrabbit].
+# [[animal]], more specifically [[rodent]], generalized as a hopping rodent that eats grass and carrots. See also [[hare]], [[jackrabbit]].
 
 === Translations ===
 
