reorganized a bit <at#34912>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -4,9 +4,9 @@
 
 ----
 
-===Definition===
+===Preposition===
 
-Preposition:
+'''at'''
 
 # (indicating place)
 #:At [[that]] [[precise]] [[position]]
@@ -14,41 +14,30 @@ Preposition:
 #:At [[six]] [[o'clock]]
 
 ===Translations===
-*[[Arabic]]: [[]]
-*[[Basque]]: [[]]
-*[[Catalan]]: [[]]
 *[[Dutch]]: [[op]] (1), [[om]] (2)
 *[[Esperanto]]: [[al]] (1), [[je]] (2)
-*[[Finnish]]: [[]]
 *[[French]]: [[à]] (1,2)
-*[[Frisian]]: [[]]
 *[[German]]: [[auf]] (1), [[in]] (1), [[um]] (2)
-*[[Greek]]: [[]]
-*[[Guarani]]: [[]]
-*[[Hebrew]]: [[]]
-*[[Hungarian]]: [[]]
 *[[Interlingua]]: [[a]], [[in]]
-*[[Italian]]: [[]] ''''
-*[[Japanese]]: []]
-*[[Korean]]: [[]]
-*[[Latin]]: [[]]
-*[[Polish]]: [[]]
 *[[Portuguese]]: [[a]], [[em]]
-*[[Russian]]: [[]]
 *[[Spanish]]: [[a]] ''''
-*[[Swedish]]: [[]]
-*[[Tupinambá]]: [[]]
-*[[Turkish]]: [[]]
-*[[Welsh]]: [[]]
 
+----
 ==Dutch==
+===Verb===
+'''at'''
 
-'Verb': past tense of [[eten]]
+#singular past tense of [[eten]]
 
+===Translations===
 *[[English]]: [[ate]]
 
+----
 ==Turkish==
+===Noun===
+'''at'''
 
-'Noun': animal
+# animal
 
+===Translations===
 *[[English]]: [[horse]]
