--- a/en/m/marmot.8229.wikitext
+++ b/en/m/marmot.8229.wikitext
@@ -11,9 +11,10 @@
 
 *[[Albanian]]: [[marmota]]
 *[[Basque]]: [[marmota]]
-*[[Belarussian]]: [[сурок]]
+*[[Belarussian]]: [[сурок]] (syrok)
 *[[Breton]]: [[moregan an alpoù]]
 *[[Bulgarian]]: [[мармот]] ([[marmot]])
+*[[Burmese]]: [[]]
 *[[Catalan]]: [[marmota]]
 *[[Croatian]]: [[svizac]]
 *[[Czech]]: [[svišť]]
@@ -28,7 +29,7 @@
 *[[Friulian]]: [[marmote]]
 *[[Gallegan]]: [[marmota]]
 *[[German]]: [[Murmeltier]] ''n''
-*[[Greek]]: [[αρμότες (p)]] '' ''
+*[[Greek]]: [[αρμότες (p)]] (harmotes?/armotes)'' ''
 *[[Hungarian]]: [[mormota]]
 *[[Icelandic]]: [[múrmeldýr]]
 *[[Indonesian]]: [[]]
@@ -42,6 +43,8 @@
 *[[Lower Sorbian]]: [[boback]]
 *[[Macedonian]]: [[мрмот]] ([[mrmot]])
 *[[Maltese]]: [[far il-ġebel]]
+*[[Maori]]: [[]]
+*[[Mongolian]]: [[]]
 *[[Norwegian]]: [[murmeldyr]]
 *[[Occitan]]: [[marmòta]], [[muret]]
 *[[Polish]]: [[świstak]] '' ''
@@ -63,3 +66,6 @@
 *[[Upper Sorbian]]: [[bobak]]
 *[[Welsh]]: [[twrlla]], [[marmot]]
 *[[Yiddish]]: [[]]
+*[[Zhuang]]: [[]]
+*[[Zulu]]: [[]]
+*[[Zuni]]: [[]]
