reword def, add more, start translations <pig#30546>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -5,7 +5,19 @@
 
 '''pig'''
 
-# farm [[mammal]] raised for its meat
+# a [[mammal]] of the genus ''Sus'', often raised on [[farm]]s for [[meat]]
+# a [[greedy]] person
+# a [[police]] officer (slang, usually meant as an insult)
+
+====Translations====
+
+*[[German]]: [[Schwein]] ''m''
+*[[Latin]]: [[porcus]]
+*[[Tok Pisin]]: [[pik]]
+
+=== Intransitive verb ===
+
+# to eat a large quantity, usually used in the phrase ''pig out''.
 
 === Translations ===
 
