Ack! Translations were already there; I forgot I was only editing one section.  Fixed it. <pig#36472>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -9,16 +9,6 @@
 # a [[greedy]] person
 # a [[police]] officer (slang, usually meant as an insult)
 
-====Translations====
-
-*[[German]]: [[Schwein]] ''m''
-*[[Latin]]: [[porcus]]
-*[[Tok Pisin]]: [[pik]]
-
-=== Intransitive verb ===
-
-# to eat a large quantity, usually used in the phrase ''pig out''.
-
 === Translations ===
 
 *[[Albanian]]: [[derri]]
@@ -39,7 +29,7 @@
 *[[Frisian]]: [[baarch]]
 *[[Friulian]]: [[purcit]]
 *[[Gallegan]]: [[porco]]
-*[[German]]: [[Schwein]] ''n''
+*[[German]]: [[Schwein]] ''m''
 *[[Greek]]: [[γουρούνι]], [[χοίρος]] '' ''
 *[[Hungarian]]: [[sertés]]
 *[[Icelandic]]: [[svín]]
@@ -49,7 +39,7 @@
 *[[Italian]]: [[maiale]] '' ''
 *[[Japanese]]: [[]] ([[]], )
 *[[Ladin]]: [[porcel]]
-*[[Latin]]: [[Sus scrofa (domesticus)]] '' ''
+*[[Latin]]: [[Sus scrofa (domesticus)]] , [[porcus]]
 *[[Latvian]]: [[cūka]]
 *[[Lithuanian]]: [[kiaulė]]
 *[[Lower Sorbian]]: [[swinja]]
@@ -71,7 +61,12 @@
 *[[Slovenian]]: [[prašič]]
 *[[Spanish]]: [[cerdo]] ''m''
 *[[Swedish]]: [[svin]]
+*[[Tok Pisin]]: [[pik]]
 *[[Turkish]]: [[domuz]]
 *[[Ukrainian]]: [[свиня]] ([[svinja]])
 *[[Upper Sorbian]]: [[swinjo]]
 *[[Welsh]]: [[mochyn]]
+
+=== Intransitive verb ===
+
+# to eat a large quantity, usually used in the phrase ''pig out''.
