--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -19,6 +19,7 @@
 *[[Breton]]: [[gwińver rous]]
 *[[Bulgarian]]: [[катерица]] ([[katerica]])
 *[[Catalan]]: [[esquirol]]
+*[[Cherokee]]: [[ᏌᎳᎵ]] (salali)
 *[[Croatian]]: [[vjeverica]]
 *[[Czech]]: [[veverka]]
 *[[Danish]]: [[egern]]
