--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -9,6 +9,7 @@
 #:''A bullet whistled past.''
 
 === Translations ===
+*[[Breton]]: [[c'hwitellat]] (1,2)
 *[[Catalan]]: [[xiular]]
 *[[Dutch]]: [[fluiten]] (1,2)
 *[[Finnish]]: [[viheltää]]
@@ -25,6 +26,7 @@
 #any high-pitched sound similar to the sound made by whistling.
 
 === Translations ===
+*[[Breton]]: [[c'hwitell]] ''f'' -où ''pl'' (1), [[c'hwitelladenn]] ''f'' -où ''pl'' (2,3)
 *[[Catalan]]: [[xiulet]] ''m''
 *[[Dutch]]: [[fluitje]] ''n'' (1), [[fluittoon]] ''m'' (2,3)
 *[[Finnish]]: [[pilli]] (1), [[vihellys]] (2) (3), [[vislaus]] (2)
