--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -1,6 +1,7 @@
 ===Noun===
 The process of dividing two or more numbers.
 ===Translation===
+*[[Breton]]: [[rannadur]] ''m'' -ioù ''pl''
 *[[Dutch]]: [[deling]] ''f''
 *[[Frisian]]: [[dieling]], [[deling]]
 *[[German]]: Division ''f''
