--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -1,83 +1,132 @@
-==[[Prefix]]==
-===[[Pronunciation]]===
+==English==
+'''mega-''' ''or, before a vowel,'' '''meg-'''
+
+===Prefix===
+====Pronunciation====
 
 '''me*ga'''
 *[[IPA]]: //
 *[[SAMPA]]: //
 MEH-ga
-===[[Etymology]]===
 
-Latin from Greek ''mega'' large, great
-===[[]]===
+====Etymology====
 
-#Resembling large, or the hugest amount
-===[[Antonym]]===
+Latin, from Greek ''mega'', large, great
 
-[[micro]]
-===[[Related words]]===
+#In the [[International System of Units]] and other [[metric]] systems of units, multiplying the [[unit]] to which it is attached by one [[million]].  Symbol: M
+#(''Computing'') multiplying the unit to which it is attached by 2<sup>20</sup> (= 1,048,576).  '''Note: Because this meaning is in conflict with the meaning used with other units, the alternative [[megabi]]- has been proposed.'''
+#(''also'' '''[[megalo]]-''' ''or, before a vowel,'' '''megal-''') Very large.
+#(''informal'') very large or impressive.  (''Also written separately as an adjective; see ''Adjective'' below.'')
 
-*[[mega-selection]]
-*[[mega buck]]
-*[[mega byte]] - used for an ice cream product.
-*[[mega city]]
+====Antonym====
+
+[[micro]]- (1)
+
+====Related words====
+
+*[[megabar]]
+*[[megabit]]
+*[[megabuck]]
+*[[megabyte]] - also used for an ice cream product (''registered trademark?  spelling?'')
+*[[megacephalous]]
+*[[Megacheiroptera]]
+*[[megacity]]
+*[[megacurie]]
+*[[megacycle]]
 *[[mega deal]]
+*[[megadeath]]
+*[[megadose]]
+*[[megadyne]]
 *[[mega energy]]
+*[[megafarad]]
+*[[megafauna]]
+*[[megaflora]]
+*[[megaflop]]
+*[[megafog]]
+*[[megagauss]]
+*[[megagram]], [[megagramme]]
+*[[megaherbivore]]
+*[[megahertz]]
 *[[mega high]]
+*[[megajoule]]
+*[[megalith]]
+*[[megalitre]], [[megaliter]]
 *[[mega low]]
 *[[mega market]]
-*[[mega mart]]
 *[[mega-mart]]
-*[[mega meal]], used by [[en:Kentycky Fried Chicken|KFC]]
+*[[mega meal]] (''registered trademark?  spelling?''), used by [[en:Kentucky Fried Chicken|KFC]]
+*[[mega-merger]]
+*[[megametre]], [[megameter]]
 *[[mega moolah]], term used by the [[en:Fox Box|Fox Box]], formerly [[en:Fox Kids|Fox Kids]]
 *[[mega morning]]
 *[[mega movie]]
+*[[meganewton]]
 *[[mega party]]
+*[[megaparsec]]
+*[[megapode]]
 *[[mega power]]
+*[[megarad]]
 *[[mega road]]
+*[[megascope]]
+*[[mega-selection]]
 *[[mega speed]]
 *[[megaspeed]]
-*[[mega ton]]
+*[[megasporangium]]
+*[[megaspore]]
+*[[megasporophyll]]
+*[[megastar]]
+*[[megastore]]
+*[[megastructure]]
+*[[megatechnology]]
+*[[Megatherium]]
+*[[megaton]]
+*[[megavertebrate]]
+*[[megavitamin]]
+*[[megavolt]]
+*[[megawatt]]
 *[[mega wide]]
-*[[mega world]]
-*[[megabyte]]
-*[[megagram]], [[megagramme]]
-*[[megalitre]], [[megaliter]]
-*[[megalo-]]
-*[[megalomania]]
-*[[megalomaniac]]
-*[[megameter]], [[megameter]]
 *[[megaword]], first used by [[en:Wheel of Fortune|Wheel of Fortune]] game show.
+*[[mega world]]
+*[[megohm]]
 
-===[[Translations]]===
-*[[Arabic]]
-*[[Basque]]:
-*[[Catalan]]:
-*[[Danish]]:
-*[[Dutch]]:
-*[[Esperanto]]:
-*[[Finnish]]:
-*[[French]]: m&eacute;ga
-*[[Frisian]]:
-*[[German]]:
-*[[Greek]]: m&eacute;ga
-*[[Hebrew]]:
-*[[Hindi]]:
-*[[Hungarian]]:
-*[[Interlingua]]:
-*[[Irish]]:
-*[[Italian]]: mega
-*[[Japanese]]:
-*[[Korean]]:
-*[[Latin]]: mega
-*[[Mandarin]]:
-*[[Norwegian]]:
-*[[Polish]]:
-*[[Portuguese]]: mega
-*[[Romanian]]:
-*[[Scottish]]:
-*[[Spanish]]: mega
-*[[Swedish]]:
-*[[Taiwanese]]:
-*[[Ukrainian]]:
-*[[Urdu]]:
-*[[Vietnamese]]:
+====Translations====
+*Arabic:
+*Basque:
+*Catalan:
+*Danish:
+*Dutch:
+*Esperanto:
+*Finnish:
+*French: [[m&eacute;ga]]-
+*Frisian:
+*German:
+*Greek: [[ ]] (m&eacute;ga-)
+*Hebrew:
+*Hindi:
+*Hungarian:
+*Interlingua:
+*Irish:
+*Italian: mega-
+*Japanese:
+*Korean:
+*Latin: mega-
+*Mandarin:
+*Norwegian:
+*Polish:
+*Portuguese: mega-
+*Romanian:
+*Scottish:
+*Spanish: mega-
+*Swedish:
+*Taiwanese:
+*Ukrainian:
+*Urdu:
+*Vietnamese:
+
+===Adjective===
+'''mega'''
+
+#(''informal'') Very large.
+#(''informall'') Impressive.
+
+====Translations====
