--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -11,7 +11,9 @@
 *[[w:IPA|IPA]]: /'bεt/
 
 === Translations ===
+*[[Breton]]: [[klaoustreañ]] (1)
 *[[Dutch]]: [[gokken]] (1), [[van op aan kunnen]] (2), [[er op kunnen rekenen]] (2)
+*[[French]]: [[parier]] (1)
 *[[Indonesian]]: [[taruh|bertaruh]], [[taruh|mempertaruhkan]] (1)
 *[[Japanese]]: [[賭ける]] ([[かける]], kakeru) (1)
 
