--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -1,3 +1,7 @@
+=== Pronunciation ===
+*[[w:SAMPA|SAMPA]]: /'/
+*[[w:IPA|IPA]]: /'bεt/
+
 === Verb ===
 
 '''to bet''' ([[bet]] / [[betted]], [[bet]] / [[betted]])
@@ -6,14 +10,11 @@
 # to be [[sure]] of something, to be able to [[count]] on something
 #: ''You bet!''
 
-=== Pronunciation ===
-*[[w:SAMPA|SAMPA]]: /'/
-*[[w:IPA|IPA]]: /'bεt/
-
-=== Translations ===
+==== Translations ====
 *[[Breton]]: [[klaoustreañ]] (1)
 *[[Dutch]]: [[gokken]] (1), [[van op aan kunnen]] (2), [[er op kunnen rekenen]] (2)
 *[[French]]: [[parier]] (1)
+*[[German]]: [[wetten]] (1), von etwas [[sicher]] [[sein]] (2)
 *[[Indonesian]]: [[taruh|bertaruh]], [[taruh|mempertaruhkan]] (1)
 *[[Japanese]]: [[賭ける]] ([[かける]], kakeru) (1)
 
@@ -23,11 +24,7 @@
 
 # past tense of to bet
 
-=== Pronunciation ===
-*[[w:SAMPA|SAMPA]]: /'/
-*[[w:IPA|IPA]]: /'bεt/
-
-=== Translations ===
+==== Translations ====
 *[[Dutch]]: [[gokte]]
 
 === Verb ===
@@ -35,19 +32,19 @@
 '''bet'''
 # past participle of to bet
 
-=== Pronunciation ===
-*[[w:SAMPA|SAMPA]]: /'/
-*[[w:IPA|IPA]]: /'bεt/
-
-=== Translations ===
+==== Translations ====
 *[[Dutch]]: [[gegokt]]
 
-=== Homophones ===
+===Noun===
 
-[[bed]]
+# a [[wager]].
+# a high degree of [[certainty]].  (''It's a good bet that it will rain tomorrow.'')
+
+====Translations====
+*[[German]]: [[Wette]] ''f'' (1), [[Bestimmtheit]] ''f'' (2)
 
 ----
 
-== [[Volapük]] == 
-=== [[noun]] === 
+== Volapük == 
+=== noun === 
 # [[flower bed]]
