changed "megabi" to "mebi" <mega#42260>

--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -14,9 +14,9 @@ MEH-ga
 Latin, from Greek ''mega'', large, great
 
 #In the [[International System of Units]] and other [[metric]] systems of units, multiplying the [[unit]] to which it is attached by one [[million]].  Symbol: M
-#(''Computing'') multiplying the unit to which it is attached by 2<sup>20</sup> (= 1,048,576).  '''Note: Because this meaning is in conflict with the meaning used with other units, the alternative [[megabi]]- has been proposed.'''
+#(''Computing'') Multiplying the unit to which it is attached by 2<sup>20</sup> (= 1,048,576).  '''Note: Because this meaning is in conflict with the meaning used with other units, the alternative [[mebi]]- has been proposed.'''
 #(''also'' '''[[megalo]]-''' ''or, before a vowel,'' '''megal-''') Very large.
-#(''informal'') very large or impressive.  (''Also written separately as an adjective; see ''Adjective'' below.'')
+#(''informal'') Very large or impressive.  (''Also written separately as an adjective; see ''Adjective'' below.'')
 
 ====Antonym====
 
