some tidying up; rewrote def & added SI def; moved gr to transliteration; usage note re "mc" symbol; added basic n def <micro#41666>

--- a/en/m/micro.34067.wikitext
+++ b/en/m/micro.34067.wikitext
@@ -1,18 +1,25 @@
-===[[Pronunciation]]===
+==English==
+===Prefix===
+'''micro-'''
 
-'''mi*cro'''
+====Pronunciation====
 *[[IPA]]: //
 *[[SAMPA]]: //
 MY-kro
-===[[Etymology]]===
-Italian and Latin from Greek ''mikro'' small
-===[[]]===
 
-#Resembling small
-===[[Antonym]]===
+====Etymology====
+:Italian and Latin, from Greek ''mikro'', small
 
-[[mega]]
-===[[Related words]]===
+#Very small.
+#In the [[International System of Units]] and other [[metric]] systems of units, multiplying the [[unit]] to which it is attached by 10<sup>-6</sup>. Symbol: μ (''official''), mc (''unofficial'').
+
+*'''Note: The symbol mc is used in non-scientific contexts where readers might not understand the official symbol μ.  For example, ''microgram(s)'', on bottles of vitamin tablets, is often abbreviated to mcg (micrograms).'''
+
+====Antonym====
+
+[[mega]]- (2)
+
+====Related words====
 
 *[[microbe]]
 *[[microbia]]
@@ -23,37 +30,42 @@ Italian and Latin from Greek ''mikro'' small
 *[[micrometre]], [[micrometer]]
 *[[microphysics]]
 *[[microwave]]
-===[[Translations]]===
 
-*[[Arabic]]
-*[[Basque]]:
-*[[Catalan]]:
-*[[Danish]]:
-*[[Dutch]]:
-*[[Esperanto]]:
-*[[Finnish]]:
-*[[French]]:
-*[[Frisian]]:
-*[[German]]:
-*[[Greek]]: [[mikro]]
-*[[Hebrew]]:
-*[[Hindi]]:
-*[[Hungarian]]:
-*[[Interlingua]]:
-*[[Irish]]:
-*[[Italian]]: micro
-*[[Japanese]]:
-*[[Korean]]:
-*[[Latin]]: micro
-*[[Mandarin]]:
-*[[Norwegian]]:
-*[[Polish]]:
-*[[Portuguese]]: micro
-*[[Romanian]]:
-*[[Scottish]]:
-*[[Spanish]]: micro
-*[[Swedish]]:
-*[[Taiwanese]]:
-*[[Ukrainian]]:
-*[[Urdu]]:
-*[[Vietnamese]]:
+====Translations====
+*Arabic:
+*Basque:
+*Catalan:
+*Danish:
+*Dutch:
+*Esperanto:
+*Finnish:
+*French:
+*Frisian:
+*German:
+*Greek: [[ ]]- (mikro)
+*Hebrew:
+*Hindi:
+*Hungarian:
+*Interlingua:
+*Irish:
+*Italian: micro- (2)
+*Japanese:
+*Korean:
+*Latin: micro- (''is this correct?'')
+*Mandarin:
+*Norwegian:
+*Polish:
+*Portuguese: micro-
+*Romanian:
+*Scottish:
+*Spanish: micro-
+*Swedish:
+*Taiwanese:
+*Ukrainian:
+*Urdu:
+*Vietnamese:
+
+===Noun===
+'''micro'''
+
+#Short form of '''microcomputer'''
