--- a/en/m/multi-billion.34077.wikitext
+++ b/en/m/multi-billion.34077.wikitext
@@ -1,47 +1,48 @@
-===[[Pronunciation]]===
+===Pronunciation===
 
 '''mul*ti-bil*li-on'''
 *[[IPA]]: //
 *[[SAMPA]]: //
 MOHL-tee-BIL-li-uhn
-===[[Etymology]]===
+===Etymology===
 [[multi-]] + [[billion]]
-===[[]]===
+===Adjective===
 #Having more than 1,000,000,000 in the billion range.
 #In the old numering system (''Notably British''), equivalent to more than 1,000,000,000,000 in the old billion range
-===[[Translations]]===
 
-*[[Arabic]]:
-*[[Basque]]:
-*[[Catalan]]:
-*[[Czech]]:
-*[[Danish]]:
-*[[Dutch]]:
-*[[Esperanto]]:
-*[[Finnish]]:
+===Translations===
+
+*Arabic:
+*Basque:
+*Catalan:
+*Czech:
+*Danish:
+*Dutch:
+*Esperanto:
+*Finnish:
 *[[French]]: [[multi-billion]]
-*[[Frisian]]:
-*[[German]]:
-*[[Greek]]: 
-*[[Hebrew]]:
-*[[Hindi]]:
-*[[Hungarian]]:
-*[[Interlingua]]:
-*[[Irish]]:
+*Frisian:
+*German:
+*Greek: 
+*Hebrew:
+*Hindi:
+*Hungarian:
+*Interlingua:
+*Irish:
 *[[Italian]]: [[multi-billione]]
-*[[Japanese]]:
-*[[Korean]]:
+*Japanese:
+*Korean:
 *[[Latin]]: multi-billion
-*[[Mandarin]]:
-*[[Norwegian]]:
-*[[Polish]]:
-*[[Portuguese]]:
-*[[Romanian]]:
-*[[Scottish]]:
-*[[Slovene]]:
-*[[Spanish]]:
-*[[Swedish]]:
-*[[Taiwanese]]:
-*[[Ukrainian]]:
-*[[Urdu]]:
-*[[Vietnamese]]:
+*Mandarin:
+*Norwegian:
+*Polish:
+*Portuguese:
+*Romanian:
+*Scottish:
+*Slovene:
+*Spanish:
+*Swedish:
+*Taiwanese:
+*Ukrainian:
+*Urdu:
+*Vietnamese:
