--- a/en/m/multicolor.34078.wikitext
+++ b/en/m/multicolor.34078.wikitext
@@ -29,7 +29,7 @@ mul*ti-co*lored '''p.p''', mul*ti-co*lo-ring
 *Finnish:
 *French:
 *Frisian:
-*German:
+*German: [[mehrfarbig]], [[vielfarbig]]
 *Greek: 
 *Hebrew:
 *Hindi:
