--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -1,7 +1,7 @@
 ==English==
+===Prefix===
 '''mega-''' ''or, before a vowel,'' '''meg-'''
 
-===Prefix===
 ====Pronunciation====
 
 '''me*ga'''
@@ -10,17 +10,12 @@
 MEH-ga
 
 ====Etymology====
-
-Latin, from Greek ''mega'', large, great
+:Greek ''megas'', big
 
 #In the [[International System of Units]] and other [[metric]] systems of units, multiplying the [[unit]] to which it is attached by one [[million]].  Symbol: M
 #(''Computing'') Multiplying the unit to which it is attached by 2<sup>20</sup> (= 1,048,576).  '''Note: Because this meaning is in conflict with the meaning used with other units, the alternative [[mebi]]- has been proposed.'''
 #(''also'' '''[[megalo]]-''' ''or, before a vowel,'' '''megal-''') Very large.
 #(''informal'') Very large or impressive.  (''Also written separately as an adjective; see ''Adjective'' below.'')
-
-====Antonym====
-
-[[micro]]- (1)
 
 ====Related words====
 
@@ -90,43 +85,17 @@ Latin, from Greek ''mega'', large, great
 *[[megohm]]
 
 ====Translations====
-*Arabic:
-*Basque:
-*Catalan:
-*Danish:
-*Dutch:
-*Esperanto:
-*Finnish:
 *French: [[m&eacute;ga]]-
-*Frisian:
-*German:
-*Greek: [[ ]] (m&eacute;ga-)
-*Hebrew:
-*Hindi:
-*Hungarian:
-*Interlingua:
-*Irish:
+*Greek: [[ ]]- (m&eacute;ga-)
 *Italian: mega-
-*Japanese:
-*Korean:
 *Latin: mega-
-*Mandarin:
-*Norwegian:
-*Polish:
 *Portuguese: mega-
-*Romanian:
-*Scottish:
 *Spanish: mega-
-*Swedish:
-*Taiwanese:
-*Ukrainian:
-*Urdu:
-*Vietnamese:
 
 ===Adjective===
 '''mega'''
 
 #(''informal'') Very large.
-#(''informall'') Impressive.
+#(''informal'') Impressive.
 
 ====Translations====
