--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -9,3 +9,4 @@
 *[[Indonesian]]: [[berat]]
 *[[Japanese]]: [[重さ]] ([[おもさ]], omosa), [[重量]] ([[じゅうりょう]], jūryō), [[体重]] ([[たいじゅう]], taijū)→(person,animal)
 *[[Romanian]]: [[greutate]] ''f''
+*[[Spanish]]: [[peso]]
