added nl <badger#64984>

--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -68,5 +68,6 @@
 # To [[pester]], to persistently [[annoy]].
 
 ====Translations====
+*Dutch: [[lastigvallen]], [[plagen]]
 *German: [[belästigen]], [[plagen]]
 *Tok Pisin: [[bagarapim]] [[sindaun]] bilong
