--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -4,7 +4,7 @@ Polish ''woda'' or Russian вода (''voda'') - water
 
 ==Noun==
 
-# A [[clear]] [[distill]]ed [[alcoholic]] [[liquor]] made from [[grain]] [[mash]].
+# A clear distilled alcoholic [[liquor]] made from grain [[mash]].
 
 ===Translations===
 
