--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -15,7 +15,7 @@
 
 '''bent'''
 
-# past participle of to [[bend]]
+# What happens when OMGWTF DO A BARREL ROLL OMGWTFLOLBBQ!!!!
 
 === Pronunciation ===
 *[[w:SAMPA|SAMPA]]: /'/
