added nl meaning <bent#43905>

--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -23,3 +23,14 @@
 
 === Translations ===
 *[[Dutch]]: [[gebogen]], [[geplooid]]
+
+----
+==Dutch==
+===Verb===
+'''bent'''
+
+# second person singular present tense of [[zijn]]
+#: Jij bent een schoonheid
+
+====Translations====
+*English: [[are]]
