--- a/en/d/dormouse.8238.wikitext
+++ b/en/d/dormouse.8238.wikitext
@@ -1,64 +1,63 @@
+==English==
 === Pronunciation ===
 *[[w:IPA|IPA]]: /'dɔɽmɑʊs/
 
 === Noun ===
-
 '''dormouse'''
 
-# [[animal]]
+#A rodent of the family [[Gliridae]].
 
-=== Translations ===
-
-*[[Albanian]]: [[gjumashi i majmë]]
+====Translations====
+*Albanian: [[gjumashi i majmë]]
 *[[Basque]]: [[muxar]]
 *[[Belarussian]]: [[соня-палчок]]
 *[[Breton]]: [[hunegan gris]]
-*[[Bulgarian]]: [[вид съсел]] ([[vid s"sel]])
+*Bulgarian: [[вид съсел]] ([[vid s"sel]])
 *[[Catalan]]: [[liró]]
-*[[Croatian]]: [[puh]]
-*[[Czech]]: [[plch]]
-*[[Danish]]: [[syvsover]], [[hasselmus]]
-*[[Dutch]]: [[relmuis]] ''f'', [[hazelmuis]] ''f''
-*[[Esperanto]]: [[gliro]]
-*[[Estonian]]: [[kunel]]
+*Croatian: [[puh]]
+*Czech: [[plch]]
+*Danish: [[syvsover]], [[hasselmus]]
+*Dutch: [[relmuis]] ''f'', [[hazelmuis]] ''f''
+*Esperanto: [[gliro]]
+*Estonian: [[kunel]]
 *[[Faroese]]: [[heslimús]]
-*[[Finnish]]: [[tupaija]]
-*[[French]]: [[loir]] ''m''
+*Finnish: [[tupaija]]
+*French: [[loir]] ''m''
 *[[Frisian]]: [[sânslieper]]
 *[[Friulian]]: [[glîr]]
 *[[Gallegan]]: [[leirón cincento]]
-*[[German]]: [[Bilch]], [[Schläfer]] ''m'', [[Schlafmaus]] ''f''
-*[[Greek]]: [[δασομυωξός]] '' ''
-*[[Hungarian]]: [[pele]]
-*[[Icelandic]]: [[heslimús]]
-*[[Indonesian]]: [[]]
-*[[Irish]]: [[luch hodlamáin]], [[dallóg fhéir]]
-*[[Italian]]: [[driomio]] '' ''
-*[[Japanese]]: [[]] ([[]], )
+*German: [[Bilch]], [[Schläfer]] ''m'', [[Schlafmaus]] ''f''
+*Greek: [[δασομυωξός]] '' ''
+*Hungarian: [[pele]]
+*Icelandic: [[heslimús]]
+*Indonesian: [[]]
+*Irish: [[luch hodlamáin]], [[dallóg fhéir]]
+*Italian: [[ghiro]] ''m''
+*Japanese: [[]] ([[]], )
 *[[Ladin]]: [[ghiro]]
-*[[Latin]]: [[Myoxus glis]] (=[[Glis glis]]), [[Muscardinus]], [[Dryomys]] '' ''
-*[[Latvian]]: [[susuris]], [[susuris]]
-*[[Lithuanian]]: [[miegapelė]]
+*Latin: [[Myoxus glis]] (=[[Glis glis]]), [[Muscardinus]], [[Dryomys]] '' ''
+*Latvian: [[susuris]], [[susuris]]
+*Lithuanian: [[miegapelė]]
 *[[Lower Sorbian]]: [[połsk]]
-*[[Macedonian]]: [[полв]] ([[polv]])
-*[[Maltese]]: [[ġurdien ta’ denbu pjuma]]
-*[[Norwegian]]: [[syvsover]], [[sovemus]]
+*Macedonian: [[полв]] ([[polv]])
+*Maltese: [[ġurdien ta’ denbu pjuma]]
+*Norwegian: [[syvsover]], [[sovemus]]
 *[[Occitan]]: [[missara]], [[greule]]
-*[[Polish]]: [[popielica]] '' ''
-*[[Portuguese]]: [[lirăo]]
-*[[Romanian]]: [[şoarece de pădure]]
+*Polish: [[popielica]] '' ''
+*Portuguese: [[lirăo]]
+*Romanian: [[şoarece de pădure]]
 *[[Romansh]]: [[durmigliet]]
 *[[Romany]]: [[xurtso]] ''m'', [[xurtsaika]] ''f''
-*[[Russian]]: [[соня полчок]] ([[sonja polčok]]) ''m''
+*Russian: [[соня полчок]] ([[sonja polčok]]) ''m''
 *[[Sami]]: [[hásselsáhpán]]
-*[[Sardinian]]: [[topi de venadroxu]], [[medrona de tzirva]]
-*[[Scottish]]: [[dallag-an-fheòir]]
+*Sardinian: [[topi de venadroxu]], [[medrona de tzirva]]
+*Scottish: [[dallag-an-fheòir]]
 *[[Serbian]]: [[пух]] ([[puh]])
-*[[Slovak]]: [[plch]]
+*Slovak: [[plch]]
 *[[Slovenian]]: [[polh]]
-*[[Spanish]]: [[lirón]] '' ''
-*[[Swedish]]: [[sjusovare]], [[sovmöss]], [[hasselmus]]
-*[[Turkish]]: [[kakırca]]
-*[[Ukrainian]]: [[соня]] ([[sonja]])
+*Spanish: [[lirón]] '' ''
+*Swedish: [[sjusovare]], [[sovmöss]], [[hasselmus]]
+*Turkish: [[kakırca]]
+*Ukrainian: [[соня]] ([[sonja]])
 *[[Upper Sorbian]]: [[lěsna myška]], [[połch]], [[połšk]]
-*[[Welsh]]: [[pathew]]
+*Welsh: [[pathew]]
