--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -11,6 +11,7 @@
 
 ==== Translations ====
 *Dutch: [[boog]], [[plooide]]
+*[[Swedish]]: [[böjde]]
 
 === Verb ===
 
@@ -25,6 +26,7 @@
 
 ==== Translations ====
 *Dutch: [[gebogen]], [[geplooid]]
+*[[Swedish]]: [[böjt]]
 
 === Noun===
 '''bent'''
@@ -33,7 +35,7 @@
 #: ''He had a natural bent for painting.''
 
 ====Translations====
-<!-- none yet -->
+*[[Swedish]]: [[böjelse]]
 
 ----
 ==Dutch==
