added nl and nl meaning <bet#99990>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -4,7 +4,6 @@
 *[[w:IPA|IPA]]: /ˈbεt/
 
 === Verb ===
-
 '''to bet''' ([[bet]] / [[betted]], [[bet]] / [[betted]])
 
 # to [[gamble]]
@@ -20,7 +19,6 @@
 *Japanese: [[賭ける]] ([[かける]], kakeru) (1)
 
 === Verb ===
-
 '''bet'''
 
 # past tense of to bet
@@ -29,7 +27,6 @@
 *Dutch: [[gokte]]
 
 === Verb ===
-
 '''bet'''
 # past participle of to bet
 
@@ -37,16 +34,26 @@
 *Dutch: [[gegokt]]
 
 ===Noun===
+'''bet'''
 
 # a [[wager]].
 # a high degree of [[certainty]].  (''It's a good bet that it will rain tomorrow.'')
 
 ====Translations====
+*Dutch: [[weddenschap]] ''f'' (1), [[waarschijnlijkheid]] ''f'' (2)
 *German: [[Wette]] ''f'' (1), [[Bestimmtheit]] ''f'' (2)
+
+----
+==Dutch==
+===Verb===
+'''bet'''
+
+# singular present tense of [[betten]]
 
 ----
 ==Tok Pisin==
 ===Noun===
+'''bet'''
 
 # [[bed]].
 
@@ -54,4 +61,6 @@
 
 == Volapük == 
 === Noun === 
+'''bet'''
+
 # [[flower bed]]
