--- a/en/s/SETI.26210.wikitext
+++ b/en/s/SETI.26210.wikitext
@@ -1,3 +1,3 @@
-==Abbreviation==
+===Abbreviation===
 
-The ''Search for Extraterrestrial Intelligence'' project.
+#The ''Search for Extraterrestrial Intelligence'' project.
