--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -6,9 +6,12 @@
 #a statement of underlying principles.
 
 === Translations ===
-*[[Finnish]]: [[teoria]]
-*[[Indonesian]]: [[teori]]
-*[[Japanese]]: [[理論]] ([[りろん]], riron)
+*Dutch: [[theorie]]
+*Finnish: [[teoria]]
+*French: [[théorie]] (f)
+*Indonesian: [[teori]]
+*Japanese: [[理論]] ([[りろん]], riron)
+*Swedish: [[teori]]
 
 === Related words ===
 *[[postulate]]
