--- a/en/e/EPROM.26249.wikitext
+++ b/en/e/EPROM.26249.wikitext
@@ -1,3 +1,4 @@
 ==Abbreviation==
 
-Etched Programmable Read Only Memory
+#Etched Programmable Read Only Memory
+#Erasable Programmable Read Only Memory
