--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -1,22 +1,25 @@
+==English==
 ===Verb===
-
 '''to seize'''
 
 # to [[grab]], to [[capture]]
 # to take advantage of an [[opportunity]]
 
-===Translations===
-*[[Dutch]]: [[grijpen]] (1,2), [[vangen]] (1), [[aangrijpen]] (2), [[pakken]] (1)
+====Related terms====
+*[[seizure]]
+
+*[[seize the day]]
+
+====Translations====
+*Dutch: [[grijpen]] (1,2), [[vangen]] (1), [[aangrijpen]] (2), [[pakken]] (1)
 
 ----
 
-==[[French]]==
+==French==
 
 ===Numeral===
-
 '''seize'''
 
-===Translations===
-
-*[[English]]: [[sixteen]]
-*[[Greek]]: [[deka-hexei]] (modern)
+====Translations====
+*English: [[sixteen]]
+*Greek: [[deka-hexei]] (modern)
