--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -6,6 +6,7 @@
 
 === Translations ===
 *[[Finnish]]: [[paino]]
+*[[German]]: [[Gewicht]]
 *[[Indonesian]]: [[berat]]
 *[[Japanese]]: [[重さ]] ([[おもさ]], omosa), [[重量]] ([[じゅうりょう]], jūryō), [[体重]] ([[たいじゅう]], taijū)→(person,animal)
 *[[Romanian]]: [[greutate]] ''f''
