+hom; +sense <weight#47581>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -1,13 +1,19 @@
-===[[noun]]===
+===Pronunciation===
+====Homophones====
+*[[wait]]
+
+===Noun===
+'''weight''' (plural: [[weights]])
 
 #the [[force]] on an object due to the gravitational attraction between it and the Earth.
+#an object used to make something heavier.
 
 :''Compare to'' [[mass]].
 
-=== Translations ===
-*[[Finnish]]: [[paino]]
-*[[German]]: [[Gewicht]]
-*[[Indonesian]]: [[berat]]
-*[[Japanese]]: [[重さ]] ([[おもさ]], omosa), [[重量]] ([[じゅうりょう]], jūryō), [[体重]] ([[たいじゅう]], taijū)→(person,animal)
-*[[Romanian]]: [[greutate]] ''f''
-*[[Spanish]]: [[peso]]
+==== Translations ====
+*Finnish: [[paino]]
+*German: [[Gewicht]]
+*Indonesian: [[berat]]
+*Japanese: [[重さ]] ([[おもさ]], omosa), [[重量]] ([[じゅうりょう]], jūryō), [[体重]] ([[たいじゅう]], taijū)→(person,animal)
+*Romanian: [[greutate]] ''f''
+*Spanish: [[peso]]
