--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -11,6 +11,7 @@
 :''Compare to'' [[mass]].
 
 ==== Translations ====
+*Dutch: [[gewicht]] (1,2)
 *Finnish: [[paino]]
 *German: [[Gewicht]]
 *Indonesian: [[berat]]
