--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -26,6 +26,7 @@
 *Indonesian: [[pecah|memecah]], [[pecah|memecahkan]], [[rusak|merusak]]
 *Japanese: [[割る]] ([[わる]], waru), [[壊す]]([[こわす]], kowasu)
 *Spanish: [[romper]]
+*Swedish: [[gå]] [[sönder]] (1, 3), [[ha]] [[sönder]] (2)
 
 === Noun ===
 '''break''' (plural: [[breaks]])
@@ -37,3 +38,4 @@
 *[[Esperanto]]: [[paŭzi]]
 *French: [[pause]]
 *Polish: [[przerwa]]
+*Swedish: [[rast]] ''c'', [[paus]] ''c''
