--- a/en/י/ישראל.4258.wikitext
+++ b/en/י/ישראל.4258.wikitext
@@ -1,8 +1,8 @@
-===[[Hebrew]]===
-
+==Hebrew==
 [Yisra'el]
 
-===[[noun]] [[masculine|m.]]===
+===Noun===
+'''ישראל''' ''m''
 
 #the [[patriarch]] [[Israel]]
 #the [[child|children]] of [[Israel]], the [[Jewish]] [[people]]
