--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -13,9 +13,9 @@
 
 *[[Albanian]]: [[derri]]
 *[[Basque]]: [[txerri]]
-*[[Belarussian]]: [[свіння]]
+*[[Belarussian]]: [[??????]]
 *[[Breton]]: [[pemoc’h]] ''m'' [[moc'h]] ''pl''
-*[[Bulgarian]]: [[свиня]] ([[svinja]])
+*[[Bulgarian]]: [[?????]] ([[svinja]])
 *[[Catalan]]: [[porc]] ''m'', [[truja]] ''f''
 *[[Croatian]]: [[svinja]]
 *[[Czech]]: [[prase]]
@@ -30,40 +30,41 @@
 *[[Friulian]]: [[purcit]]
 *[[Gallegan]]: [[porco]]
 *[[German]]: [[Schwein]] ''m''
-*[[Greek]]: [[γουρούνι]], [[χοίρος]] '' ''
+*[[Greek]]: [[????????]], [[??????]] '' ''
 *[[Hungarian]]: [[sertés]]
 *[[Icelandic]]: [[svín]]
 *[[Indonesian]]: [[]]
 *[[Interlingua]]: [[porco]]
 *[[Irish]]: [[muc]]
 *[[Italian]]: [[maiale]] '' ''
-*[[Japanese]]: [[豚]] ([[ぶた]], buta)
+*[[Japanese]]: [[?]] ([[??]], buta)
 *[[Ladin]]: [[porcel]]
 *[[Latin]]: [[Sus scrofa (domesticus)]] , [[porcus]]
-*[[Latvian]]: [[cūka]]
-*[[Lithuanian]]: [[kiaulė]]
+*[[Latvian]]: [[cu¯ka]]
+*[[Lithuanian]]: [[kiaule˙]]
 *[[Lower Sorbian]]: [[swinja]]
-*[[Macedonian]]: [[свиња]] ([[svinja]])
-*[[Maltese]]: [[ħanżir]]
+*[[Macedonian]]: [[?????]] ([[svinja]])
+*[[Maltese]]: [[?anz˙ir]]
+*[[Maori]]: [[poaka]]
 *[[Norwegian]]: [[svin]], [[gris]]
 *[[Occitan]]: [[pòrc]]
-*[[Polish]]: [[świnia]] '' ''
+*[[Polish]]: [[s´winia]] '' ''
 *[[Portuguese]]: [[porco]] ''m''
 *[[Romanian]]: [[porc]]
 *[[Romansh]]: [[portg]]
 *[[Romany]]: [[balo]] ''m'' bali]] ''f''
-*[[Russian]]: [[свинья]] ([[svin'ja]]) '' ''
+*[[Russian]]: [[??????]] ([[svin'ja]]) '' ''
 *[[Sami]]: [[spiidni]]
 *[[Sardinian]]: [[procu]], [[tzotzu]], [[tzotzoi]], [[mannali]]
 *[[Scottish]]: [[muc]]
-*[[Serbian]]: [[свиња]] ([[svinja]])
+*[[Serbian]]: [[?????]] ([[svinja]])
 *[[Slovak]]: [[prasa]]
-*[[Slovenian]]: [[prašič]]
+*[[Slovenian]]: [[prasˇicˇ]]
 *[[Spanish]]: [[cerdo]] ''m''
 *[[Swedish]]: [[gris]], [[svin]]
 *[[Tok Pisin]]: [[pik]]
 *[[Turkish]]: [[domuz]]
-*[[Ukrainian]]: [[свиня]] ([[svinja]])
+*[[Ukrainian]]: [[?????]] ([[svinja]])
 *[[Upper Sorbian]]: [[swinjo]]
 *[[Welsh]]: [[mochyn]]
 
