--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -43,7 +43,7 @@
 *Japanese: [[兎]] ([[ウサギ]], usagi)
 *[[Judeo-Spanish]]: [[konejo]]
 *[[Ladin]]: [[conicio]]
-*Latin: [[Oryctolagus cuniculus]]
+*Latin: [[cuniculus]] ''m''
 *Latvian: [[trusis]]
 *Lithuanian: [[triušis]]
 *[[Lower Sorbian]]: [[karnikel]]
