--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -25,6 +25,7 @@
 *[[Esperanto]]: [[rompi]] (1,2), [[panei]] (3)
 *Indonesian: [[pecah|memecah]], [[pecah|memecahkan]], [[rusak|merusak]]
 *Japanese: [[割る]] ([[わる]], waru), [[壊す]]([[こわす]], kowasu)
+*Latin: [[rumpo]]
 *Spanish: [[romper]]
 *Swedish: [[gå]] [[sönder]] (1, 3), [[ha]] [[sönder]] (2)
 
