--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -10,6 +10,9 @@
 
 :''Compare to'' [[mass]].
 
+==== Related terms ====
+*[[weight]]
+
 ==== Translations ====
 *Dutch: [[gewicht]] (1,2)
 *Finnish: [[paino]]
@@ -18,4 +21,4 @@
 *Japanese: [[重さ]] ([[おもさ]], omosa), [[重量]] ([[じゅうりょう]], jūryō), [[体重]] ([[たいじゅう]], taijū)→(person,animal)
 *Romanian: [[greutate]] ''f''
 *Spanish: [[peso]]
-*[[Swedish]]: [[vikt]] (1,2)
+*Swedish: [[vikt]] (1,2)
