--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -11,7 +11,7 @@
 :''Compare to'' [[mass]].
 
 ==== Related terms ====
-*[[weight]]
+*[[weigh]]
 
 ==== Translations ====
 *Dutch: [[gewicht]] (1,2)
