separated two different language entries <abaco#67060>

--- a/en/a/abaco.4397.wikitext
+++ b/en/a/abaco.4397.wikitext
@@ -1,3 +1,13 @@
-== [[noun]] ==
-# Interlingua for ''' '' [[Abacus]] '' '''.
-# Italian for ''' '' [[Abacus]] '' '''.
+==Interlingua==
+===Noun===
+'''abaco'''
+
+# [[abacus]]
+
+
+----
+==Italian==
+===Noun===
+'''abaco''' ''m''
+
+# [[abacus]]
