--- a/en/g/grognard.855664.wikitext
+++ b/en/g/grognard.855664.wikitext
@@ -2,4 +2,4 @@
 
 2. Napoleon Bonapartes name for old veteran soldiers.
 
-3. ''slang'' for someone who enyos playing [[board wargames]].
+3. ''slang'' for someone who enjoys playing [[board wargames]].
