--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -14,3 +14,6 @@ Japanese ''Ninten'', "leave luck to heaven" or "in heaven's hands", + ''dou'', a
 #A video game company and console manufacturer based in Kyoto, Japan, originally founded in 1889 by Fusajiro Yamauchi as a hanafuda company, and that changed into a video game company in the late 1900's.
 #The [[Nintendo Entertainment System]].
 #A video game console manufactured by this company.
+
+==Further Reading==
+*[http://en.wikipedia.org/wiki/Nintendo Wikipedia article on Nintendo]
