--- a/en/g/grognard.855664.wikitext
+++ b/en/g/grognard.855664.wikitext
@@ -2,4 +2,4 @@
 
 2. Napoleon Bonapartes name for old veteran soldiers.
 
-3. ''slang'' for someone who enjoys playing [[wargaming#Board wargaming|board wargames]].
+3. ''slang'' for someone who enjoys playing [[wargaming#Board wargaming|board wargames]]. This use is suposed to have been coined by John Young in the early 1970's while employed by SPI ''(Simulations Publications Inc.)'', a legendary New York based publisher (now defunct) of board wargames, founded by [[Jim Dunnigan]].
