fmt; deleted empty translation; +synchronisation request <pajamas#78349>

--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -1,23 +1,28 @@
+
+<!-- NOTE: If you edit this page, please also edit "pyjamas" -->
+
+
+==English==
 === Etymology ===
 From Persian ''p&aelig;'' meaning "leg" and ''jama'' meaning "clothing".
 
-== [[noun]] ==
-#clothes for wearing to bed and sleeping in, usually consisting of a loose fitting shirt and pants.
+===Noun===
+'''pajamas''' ''plural''
+#[[Clothes]] for wearing to bed and sleeping in, usually consisting of a loose-fitting shirt and pants.
 
-===[[Translation]]s===
-*[[Basque]]: [[]]
-*[[Catalan]]: [[]] ''''
-*[[Dutch]]: [[pyjama]] ''m''
-*[[Esperanto]]: [[]]
-*[[Finnish]]: [[pyjama]], [[yöpuku]]
-*[[French]]: [[pijama]] ''m''
-*[[German]]: [[]] ''''
-*[[Greek]]: [[]] ''''
-*[[Indonesian]]: [[piyama]]
+====Variant spellings====
+*[[pyjamas]] (''British'')
+
+====Translations====
+*Dutch: [[pyjama]] ''m singular''
+*Finnish: [[pyjama]], [[yöpuku]]
+*French: [[pijama]] ''m singular''
+*Indonesian: [[piyama]]
 *[[Interlingua]]: [[pajama]]
-*[[Japanese]]: [[パジャマ]] (pajama)
-*[[Javanese]]: [[]]
-*[[Polish]]: [[]]
-*[[Spanish]]: [[pijama]], [[pijamas]] ''n''
+*Japanese: [[パジャマ]] (pajama)
+*Spanish: [[pijama]], [[pijamas]] ''n''
 *Swedish: [[pyjamas]] ''c''
-*[[Turkish]]: [[]]
+
+
+
+<!-- NOTE: If you edit this page, please also edit "pyjamas" -->
