--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -31,7 +31,7 @@
 *Dutch: [[op]] (1), [[om]] (2)
 *[[Esperanto]]: [[al]] (1), [[je]] (2)
 *French: [[à]] (1,2)
-*German: [[auf]] (1), [[in]] (1), [[um]] (2)
+*German: [[an]] (1), [[auf]] (1), [[bei]] (1), [[in]] (1), [[um]] (2), [[nach]] (3), [[zu]] (3)
 *[[Interlingua]]: [[a]], [[in]]
 *[[Persian]]: [[دَر]] (dær)
 *Portuguese: [[a]], [[em]]
