--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -31,7 +31,7 @@
 *[[Persian]]: [[دَر]] (dær)
 *Portuguese: [[a]], [[em]]
 *Spanish: [[a]], [[en]]
-*Swedish: [[vid]] (1), [[på]] (1, 3), [[mot]] (3) 
+*Swedish: [[på]] (1, 3), [[mot]] (3) 
 
 ----
 
