+fi singular <pajamas#163300>

--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -14,7 +14,7 @@ From Persian ''p&aelig;'' meaning "leg" and ''jama'' meaning "clothing".
 
 ====Translations====
 *Dutch: [[pyjama]] ''m singular''
-*Finnish: [[pyjama]], [[yöpuku]]
+*Finnish: [[pyjama]], [[yöpuku]] ''singular''
 *French: [[pijama]] ''m singular''
 *Indonesian: [[piyama]]
 *[[Interlingua]]: [[pajama]]
