--- a/en/o/octillion.34109.wikitext
+++ b/en/o/octillion.34109.wikitext
@@ -1,4 +1,4 @@
-*''Western (Arabic) Numeral'': '''Octillion, 10<sup>27</sup>''''
+*''Western (Arabic) Numeral'': '''Octillion, 10<sup>48</sup> in UK, 10<sup>27</sup>'''' in US
 **'''Previous''': [[septillion]], 10<sup>24</sup>, [[hundred septillion]] 10<sup>26</sup>
 **'''Next''': [[nonillion]], 10<sup>30</sup>, [[ten nonillion]], 10<sup>31</sup>
 
