--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -47,7 +47,7 @@ For an example of a character with multiple pronunciations (and hence Romanizati
 ** '''[[On]]''': [[げつ]] (getsu), [[がつ]] (gatsu)
 ** '''[[Kun]]''': [[つき]] (tsuki)
 
-* '''Other info''': [[つき]] (tsuki) is moon, [[げつ]] (getsu) is month, [[がつ]]  (gatsu) is the counter for months of the year, ([[&#20845;]]&#26376 is June).
+* '''Other info''': [[つき]] (tsuki) is moon, [[げつ]] (getsu) is moon and month, [[がつ]]  (gatsu) is the counter for months of the year, ([[六]]月 is June).
 
 ----
 
