--- a/en/a/abandonate.4398.wikitext
+++ b/en/a/abandonate.4398.wikitext
@@ -4,7 +4,7 @@
 
 === Translations ===
 *[[French]]: [[abandonné]], [[déserté]]
-*[[Italian]]: [[Abbandonato]]
-*[[Spanish]]: [[Abandonado]]
-*[[Portuguese]]: [[Abandonado]]
-*[[German]]: [[Verlassen]]
+*[[Italian]]: [[abbandonato]]
+*[[Spanish]]: [[abandonado]]
+*[[Portuguese]]: [[abandonado]]
+*[[German]]: [[verlassen]]
