/* Translations */  sk <pig#86584>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -59,7 +59,7 @@
 *Sardinian: [[procu]], [[tzotzu]], [[tzotzoi]], [[mannali]]
 *Scottish: [[muc]]
 *Serbian: [[свиња]] ([[svinja]])
-*Slovak: [[prasa]]
+*Slovak: [[prasa]] ''n'' (1)
 *Slovenian: [[prašič]]
 *Spanish: [[cerdo]] ''m''
 *Swedish: [[gris]], [[svin]]
@@ -81,4 +81,4 @@
 # imitation, not real.
 # 'Pig Latin', 'Pig Iron'.
 
-[[Category:English mammals]]
+[[Category:English mammals]]-->
