--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -9,6 +9,7 @@
 # a [[police]] officer (slang, usually meant as an insult)
 # a selfish person.
 # a difficult problem.
+# a [[dirty]] person
 
 ==== Translations ====
 *Albanian: [[derri]]
