--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -33,7 +33,7 @@
 *[[Gallegan]]: [[porco]]
 *German: [[Schwein]] ''m''
 *Greek: [[γουρούνι]], [[χοίρος]] '' ''
-*Hungarian: [[sertés]], [[disznó]] <!-- moved over here as a translation of Dutch [[zwijn]], [[swine]])
+*Hungarian: [[sertés]], [[disznó]] (moved over here as a translation of Dutch [[zwijn]], [[swine]])
 *Icelandic: [[svín]]
 *[[Interlingua]]: [[porco]]
 *Irish: [[muc]]
@@ -82,4 +82,4 @@
 # imitation, not real.
 # 'Pig Latin', 'Pig Iron'.
 
-[[Category:English mammals]]-->
+[[Category:English mammals]]
