--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -26,7 +26,7 @@
 *Italian: [[cosa]] ''f''
 *Japanese: [[もの]] (mono)
 *Latin: [[res]]
-*Norwegian: [[ting]] ''m''
+*Norwegian: [[ting]], [[dings]], [[greie]]''m''
 *[[Persian]]: [[چيز]] (čiz)
 *Polish: [[rzecz]] ''f''
 *Portuguese: [[coisa]] ''f''
