--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -37,7 +37,7 @@
 *French: [[blaireau]] ''m''
 *[[Frisian]]: [[das]]
 *[[Friulian]]: [[tac]], [[tas]]
-*[[Gallegan]]: [[teixugo]], [[porco teixo]]
+*[[Galician]]: [[teixugo]], [[porco teixo]]
 *German: [[Dachs]] ''m''
 *Greek: [[ασβός]]
 *Hungarian: [[borz]]
