--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -49,7 +49,7 @@
 *[[Scottish]]: [[radan molach]]
 *[[Serbian]]: [[бизамски пацов]] ([[bizamski pacov]])
 *[[Slovak]]: [[ondatra pižmová]]
-*[[Slovenian]]: [[pižmovka]]
+*[[Slovenian]]: [[pižmovka]] ''f''
 *[[Spanish]]: [[rata almizclera]] '' ''
 *[[Swedish]]: [[bisam]]
 *[[Turkish]]: [[misk sıçanı]]
