--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -51,7 +51,7 @@
 *Scottish: [[neas bheag]]
 *Serbian: [[ласица]] ([[lasica]])
 *Slovak: [[lasica]]
-*Slovenian: [[podlasica]]
+*Slovenian: [[podlasica]] ''f''
 *Spanish: [[comadreja]] ''f'', [[mostela]] ''f''
 *Swedish: [[vessla]]
 *Turkish: [[gelincik]]
