--- a/en/ι/Ισραήλ.4257.wikitext
+++ b/en/ι/Ισραήλ.4257.wikitext
@@ -1,6 +1,6 @@
-===[[Greek]]===
+==Greek==
 
-[[ancient]] [isra'ε:l], [[modern]] [isra'il]
+[[ancient]] [isra'ε:l], [[modern]] [iza'il]
 
 ===[[masculine]]===
 
@@ -8,10 +8,10 @@
 #The [[Hebrew]] [[people]], the [[child|children]] of [[Israel]].
 #The [[state]] of [[Israel]], both [[ancient]] and [[modern]].
 
-=== [[other]] [[language|languages]]===
+=== [[other]] [[language]]s===
 
 *[[English]]: ''[[Israel]]'' (1-3)
-*[[Esperanto]]: ''[[Izraelo]]'' (1), ''[[Izraelido|Izraelidoj]]'' ''[[plural|pl.]]'' (2), ''[[Israelo]]'' (3)
+*[[Esperanto]]: ''[[Izraelo]]'' (1), ''[[Izraelido]]j'' ''[[plural|pl.]]'' (2), ''[[Israelo]]'' (3)
 *[[French]]: ''[[Israël]]'' (1-3)
 *[[German]]: ''[[Israel]]'' (1-3)
 *[[Italian]]: ''[[Israele]]'' (1-3)
