--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -25,7 +25,7 @@
 ===Etymology===
 :'''[[voda#Slovak|voda]]''' (''[[water]]'') + '''[[-ka#Slovak|-ka]]''' (''diminutive suffix''), or ''little water''
 ===Noun===
-:'''vodka'' ''f'', '''vodky''' ''pl''
+:'''vodka''' ''f'', '''vodky''' ''pl''
 :'''vodk''' ''stem''
 :'''vodiek''' ''{{genpl}}''
 :{{decpat}} {{zena}}
