--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -2,7 +2,7 @@
 
 === Etymology ===
 
-From Latin roots to do with appearance ''please flesh this out''
+Latin: '''species''' [[view]]; [[appearance]]; [[vision]]; [[dream]]; [[semblance]] <'''specere''' to [[see]] + '''-ies''' suffix signifying [[abstract]] noun
 
 === Noun ===
 '''species''' (Plural: [[species]])
@@ -10,16 +10,18 @@ From Latin roots to do with appearance ''please flesh this out''
 # A group of objects having similar appearance
 #: ''This species of rock is unique to the area''
 #:''Pigeons and ducks are two species of birds.''
-# A well-differentiated form of organism, more distinct than a [[variety]]
+# A well-differentiated form of [[organism]], more distinct than a [[variety]]
 #: ''Hence, in determining whether a form should be ranked as a species or a variety, the opinion of naturalists having sound judgment and wide experience seems the only guide to follow.'' -- Darwin, '''On the Origin of Species'''
 # A well-differentiated [[clade]] whose members are similar
-# The entirety of a group of living organisms that can produce fertile offspring with any other member of this group.
+# '''Taxonomy''' The major [[subset]] of a [[genus]].  Organisms are grouped within a species because they have similar [[genotype]]s and [[phenotype]]s, their [[genetic sequence]]s are almost identical, or other evidence such as the [[fossil record]] points to recent common ancestry.  Organisms which [[reproduce]] [[sexually]] are also grouped together if they are capable of producing [[fertile]] [[offspring]] with one another through [[sex]].
 
 ==== Related Terms ====
 *[[speciate]]
 *[[speciation]]
 *[[specious]]
 *[[ring species]]
+*[[subspecies]]
+*[[specie]]
 
 ====Translations====
 *Chinese: [[種]], [[類]], [[種類]]
@@ -43,5 +45,4 @@ From Latin roots to do with appearance ''please flesh this out''
 *[[order]]
 *[[phylum]]
 *[[race]]
-*[[subspecies]]
 *[[variety]]
