--- a/en/m/mundo.4430.wikitext
+++ b/en/m/mundo.4430.wikitext
@@ -1,9 +1,13 @@
-Spanish
+==Spanish==
 
-==[[noun]]==
+===Hyphenation====
+:mun&middot;do
 
-#[[World]]
+===Noun===
+'''mundo''' ''m''
 
-==Synonyms==
+# [[world]]
+
+===Synonyms===
 
 *[[Orbe]] : this world is less used than mundo
