--- a/en/ι/ιταλικός.4256.wikitext
+++ b/en/ι/ιταλικός.4256.wikitext
@@ -1,10 +1,14 @@
-==[[Greek]] ([[modern]])==
-[[IPA]] [itali'kos]
-=== etymology ===
+==Greek (modern)==
+*[[IPA]] [itali'kos]
+=== Etymology ===
 ''[[Ιταλία]]'', [[Italy]].
-=== adjective ===
-#[[Italian]], [[pertain|pertaining]] to [[Italy]].
-==== translations ====
+
+===Adjective===
+'''ιταλικός''' ''m'' (''f'' ιταλική, ''n'' ιταλικό)
+
+#[[Italian]], pertaining to [[Italy]].
+
+==== Translations ====
 *[[Bulgarian]]: [[италиански]] ''m'', италианска ''f'', италианско ''n'', италиански ''pl''
 *[[Esperanto]]: [[itala]]
 *[[French]]: [[italien]] ''m'', [[italienne]] ''f''
