--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -15,6 +15,7 @@
 *Polish: [[wódka]] ''f''
 *Russian: [[водка]] ''f''
 *{{sk}}: [[vodka#Slovak|vodka]] ''f''
+*Ukrainian: горілка ''f'' (horilka), водка ''f''
 
 ===See also===
 
