--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -28,6 +28,7 @@ Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse 
 *Dutch: [[ondanks]], [[desondanks]]
 *French: [[malgré]], [[bien que]], [[cependant]]
 *Finnish: [[vaikka]]
+*German: [[obwohl]]
 *Indonesian: [[walau]], [[meski]]
 *Italian: [[anche]] [[se]]
 *Portuguese: [[apesar]] de
