/* Translations */ dewikify well-known lang names <ιταλικός#95596>

--- a/en/ι/ιταλικός.4256.wikitext
+++ b/en/ι/ιταλικός.4256.wikitext
@@ -9,15 +9,15 @@
 #[[Italian]], pertaining to [[Italy]].
 
 ==== Translations ====
-*[[Bulgarian]]: [[италиански]] ''m'', италианска ''f'', италианско ''n'', италиански ''pl''
+*Bulgarian: [[италиански]] ''m'', италианска ''f'', италианско ''n'', италиански ''pl''
 *[[Esperanto]]: [[itala]]
-*[[French]]: [[italien]] ''m'', [[italienne]] ''f''
-*[[German]]: [[italienisch]]
+*French: [[italien]] ''m'', [[italienne]] ''f''
+*German: [[italienisch]]
 *[[Interlingua]]: [[italian]]
-*[[Polish]]: [[włoski]]
-*[[Portuguese]]: [[italiano]] ''m'', [[italiana]] ''f''
-*[[Russian]]: [[италянский]]
-*[[Serbian]] and [[Croatian]]: [[talijanski]]
-*[[Slovenian]]: [[italijanski]]
-*[[Spanish]]: [[italiano]]
-*[[Swedish]]: [[italienisk]]
+*Polish: [[włoski]]
+*Portuguese: [[italiano]] ''m'', [[italiana]] ''f''
+*Russian: [[италянский]]
+*Serbian and [[Croatian]]: [[talijanski]]
+*Slovenian: [[italijanski]]
+*Spanish: [[italiano]]
+*Swedish: [[italienisk]]
