--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -18,6 +18,16 @@
 #: ''There's nothing more thrilling to the whale watcher than to see a whale surface and blow.''
 #: ''Thar she blows!'' [that is, ''I see a whale spouting!'']
 
+==== Translations ====
+*[[Chinese]]: [[吹]]
+*[[Dutch]]: [[blazen]]
+*[[Esperanto]]: [[blovi]]
+*[[Finnish]]: [[tuulla]] (1), [[räjähtää]] (2), [[puhaltaa]] (4)
+*[[French]]: [[souffler]] (1), [[exploser]] (2)
+*[[German]]: [[schlagen]]
+*[[Indonesian]]: [[tiup|meniup]], [[ledak|meledakkan]]
+*[[Japanese]]: [[吹く]] ([[ふく]], fuku), [[爆発]]する ([[ばくはつ]]する, bakuhatsu-suru)
+
 === Transitive Verb ===
 
 # To propel by an [[air current]].
@@ -30,14 +40,7 @@
 #: ''blow bubbles''
 
 ==== Translations ====
-*[[Chinese]]: [[吹]]
-*[[Dutch]]: [[blazen]]
-*[[Esperanto]]: [[blovi]]
-*[[Finnish]]: [[tuulla]] (1), [[räjähtää]] (2), [[puhaltaa]] (4)
-*[[French]]: [[souffler]] (1), [[exploser]] (2)
-*[[German]]: [[schlagen]]
-*[[Indonesian]]: [[tiup|meniup]], [[ledak|meledakkan]]
-*[[Japanese]]: [[吹く]] ([[ふく]], fuku), [[爆発]]する ([[ばくはつ]]する, bakuhatsu-suru)
+*[[Finnish]]: [[puhaltaa]] (1,4), [[tuhlata]] (2), [[ottaa suihin]] (3)
 
 === Noun ===
 
