--- a/en/m/mini.34065.wikitext
+++ b/en/m/mini.34065.wikitext
@@ -22,35 +22,5 @@ Latin word for small, or tiny.
 *[[mini-size]]
 
 ===[[Translations]]===
-*[[Arabic]]:
-*[[Basque]]:
-*[[Catalan]]:
-*[[Danish]]:
-*[[Dutch]]:
-*[[Esperanto]]:
-*[[Finnish]]:
-*[[French]]: mini
-*[[Frisian]]:
-*[[German]]:
-*[[Greek]]: 
-*[[Hebrew]]:
-*[[Hindi]]:
-*[[Hungarian]]:
-*[[Interlingua]]:
-*[[Irish]]:
-*[[Italian]]:
-*[[Japanese]]:
-*[[Korean]]:
+*{{ga}}: [[mion]]-
 *[[Latin]]: mini
-*[[Mandarin]]:
-*[[Norwegian]]:
-*[[Polish]]:
-*[[Portuguese]]:
-*[[Romanian]]:
-*[[Scottish]]:
-*[[Spanish]]:
-*[[Swedish]]:
-*[[Taiwanese]]:
-*[[Ukrainian]]:
-*[[Urdu]]:
-*[[Vietnamese]]:
