--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -16,6 +16,7 @@
 *[[French]]: [[siffler]]
 *[[Indonesian]]: [[siul|bersiul]]
 *[[Polish]]: [[gwizdać]], [[zagwizdać]]
+*[[Russian]]: [[свистеть]]
 
 ===Noun===
 
