--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -28,6 +28,7 @@
 *[[Breton]]: [[konikl]]
 *Bulgarian: [[заек]] ([[zaek]])
 *[[Catalan]]: [[conill]]
+*[[Chinese]]: [[兔]] (tù)
 *Croatian: [[kunič]]
 *Czech: [[králík]]
 *Danish: [[kanin]]
