Scandinavian meaning <thing#99627>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -34,3 +34,13 @@
 *Spanish: [[cosa]] ''f''
 *Swedish: [[sak]]
 *[[Tupinambá]]: [[mba'e]]
+
+===Pronunciation===
+<!-- Without the key to Websters 1913, I'm not 100% sure this is correct. -->
+*thēng, /θiŋ/
+
+===Noun===
+'''Thing'''
+
+<!-- Definition from Websters 1913 -->
+# In Scandinavian countries, a legislative or judicial assembly.
