--- a/en/e/enumerate.34095.wikitext
+++ b/en/e/enumerate.34095.wikitext
@@ -1,2 +1,4 @@
-# To specify each of a sequence individually
-# To determine the amount of
+==English==
+===Verb===
+# To specify each member of a [[sequence]] individually in incrementing order
+# To [[determine]] the [[amount]] of
