--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -36,7 +36,7 @@ Latin: ''species'' [[view]]; [[appearance]]; [[vision]]; [[dream]]; [[semblance]
 *[[Italian]]: [[specie]] ''f'', (plural: [[speci]])
 *Japanese: [[種]] ([[しゅ]], shu), [[類]] ([[るい]], rui), [[種類]] ([[しゅるい]], shurui)
 *Lithuanian: [[rūšis]] ''f''
-*Polish: [[gatunek]] ''n''
+*[[Polish]]: gatunek ''m''
 *Portuguese: [[espécie]] ''f''
 *Romanian: [[specie]] ''f''
 *Swedish: [[art]] ''c''
