--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -33,10 +33,10 @@ Latin: ''species'' [[view]]; [[appearance]]; [[vision]]; [[dream]]; [[semblance]
 *German: [[Art]] ''f'', [[Spezies]] ''f''
 *Indonesian: [[spesies]], [[jenis]]
 *Interlingua: [[specie]]
-*[[Italian]]: [[specie]] ''f'', (plural: [[speci]])
+*Italian: [[specie]] ''f'', (plural: [[speci]])
 *Japanese: [[種]] ([[しゅ]], shu), [[類]] ([[るい]], rui), [[種類]] ([[しゅるい]], shurui)
 *Lithuanian: [[rūšis]] ''f''
-*[[Polish]]: gatunek ''m''
+*Polish: [[gatunek]] ''m''
 *Portuguese: [[espécie]] ''f''
 *Romanian: [[specie]] ''f''
 *Swedish: [[art]] ''c''
