--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -1,6 +1,7 @@
 ==English==
 
 #A dialect of the [[English]] language that is chiefly spoken in the [[United States]].
+#A "version" of English invented by Microsoft.
 
 ===Translations===
 
