sep dual trans; fmt; wikification of lang names; latin -> scientific <polecat#179507>

--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -1,63 +1,62 @@
+==English==
 === Pronunciation ===
 *[[w:IPA|IPA]]: /'pɔlkæt/
 
 === Noun ===
-
 '''polecat'''
 
-# [[animal]]
+# [[animal]]. {{substub}}
 
-=== Translations ===
+====Scientific name====
+*[[Mustela putorius]]
 
-*[[Albanian]]: [[qelbësi]]
+==== Translations ====
+*Albanian: [[qelbësi]]
 *[[Basque]]: [[ipurtats]]
-*[[Belarussian]]: [[тхор лясны/ чорны]]
-*[[Bosnian]]: [[tvor]] ''m''
+*Belarusian: [[тхор лясны/ чорны]]
+*Bosnian: [[tvor]] ''m''
 *[[Breton]]: [[pudask]]
-*[[Bulgarian]]: [[прът]] ([[pr"t]])
+*Bulgarian: [[прът]] (pr"t)
 *[[Catalan]]: [[turó]]
-*[[Croatian]]: [[tvor]]
-*[[Czech]]: [[tchoř]]
-*[[Danish]]: [[ilder]]
-*[[Dutch]]: [[bunzing]] ''m''
+*Croatian: [[tvor]]
+*Czech: [[tchoř]]
+*Danish: [[ilder]]
+*Dutch: [[bunzing]] ''m''
 *[[Esperanto]]: [[putoro]]
-*[[Estonian]]: [[tuhkur]]
-*[[Finnish]]: [[hilleri]]
-*[[French]]: [[putois]] ''m''
+*Estonian: [[tuhkur]]
+*Finnish: [[hilleri]]
+*French: [[putois]] ''m''
 *[[Frisian]]: [[murd]]
 *[[Friulian]]: [[puçul]], [[pufe]], [[pudîs]], [[spuç]]
 *[[Gallegan]]: [[tourón]]
-*[[German]]: [[Iltis]] ''m''
-*[[Greek]]: [[οζοϊκτίς]], [[βρωμοκούναβο]] '' ''
-*[[Hungarian]]: [[görény]]
+*German: [[Iltis]] ''m''
+*Greek: [[οζοϊκτίς]], [[βρωμοκούναβο]]
+*Hungarian: [[görény]]
 *[[Irish]]: [[firéad]]
-*[[Italian]]: [[puzzola]] ''f''
-*[[Japanese]]: [[]] ([[]], )
-*[[Ladin]]: [[]]
-*[[Latin]]: [[Mustela putorius]] '' ''
-*[[Latvian]]: [[sesks]]
-*[[Lithuanian]]: [[šeškas]]
+*Italian: [[puzzola]] ''f''
+*Latvian: [[sesks]]
+*Lithuanian: [[šeškas]]
 *[[Lower Sorbian]]: [[twoŕ]]
-*[[Macedonian]]: [[обичен твор]] ([[običen tvor]])
-*[[Norwegian]]: [[ilder]]
+*Macedonian: [[обичен твор]] ([[običen tvor]])
+*Norwegian: [[ilder]]
 *[[Occitan]]: [[catpudre]]
-*[[Polish]]: [[tchórz]] '' ''
-*[[Portuguese]]: [[toirăo]]
-*[[Romanian]]: [[dihor]]
+*Polish: [[tchórz]]
+*Portuguese: [[toirăo]]
+*Romanian: [[dihor]]
 *[[Romansh]]: [[telpi]]
 *[[Romany]]: [[mutsa-kandini]] ''f''
-*[[Russian]]: [[хорёк лесной / черный]] ([[horjok lеsnoj / čеrnyj]]) '' ''
+*Russian: [[хорёк лесной]], (horjok lеsnoj), [[черный]] (čеrnyj)
 *[[Sami]]: [[čáhppesbuoidda]]
 *[[Sardinian]]: [[pùtzola]]
-*[[Scottish]]: [[feòcallan]]
-*[[Serbian]]: [[твор (-мрки)]] ([[tvor (-mrki)]])
-*[[Slovak]]: [[tchor obyčajný]]
-*[[Slovenian]]: [[dihur]] ''m''
-*[[Spanish]]: [[turón]] ''m''
-*[[Swedish]]: [[iller]]
-*[[Turkish]]: [[kokarca]]
-*[[Ukrainian]]: [[тхiр лiсовий / чорний]] ([[thir lisovij / čornij]])
+*[[Scottish Gaelic]]: [[feòcallan]]
+*Serbian: [[твор]] ([[-мрки]]) ([[tvor]] ([[-mrki]]))
+*Slovak: [[tchor obyčajný]]
+*Slovenian: [[dihur]] ''m''
+*Spanish: [[turón]] ''m''
+*Swedish: [[iller]]
+*Turkish: [[kokarca]]
+*Ukrainian: [[тхiр лiсовий]] (thir lisovij), [[чорний]] (čornij)
 *[[Upper Sorbian]]: [[tchór]]
-*[[Welsh]]: [[ffwlbart]]
+*Welsh: [[ffwlbart]]
 
 [[Category:English mammals]]
