--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -1,12 +1,15 @@
 ==English==
-cop noun short for copper:  one who cops, from capere, Latin and Old French 
-capere: to capture. 
 ===Noun===
+===Etymolgy===
+short for copper,because early [[NYPD]] outfits had copper buttons
 # (slang) [[Police]] officer.
 ====Translations====
 *{{sk}}: [[poliš]] ''m'', [[hekáč]] ''m''
 ===Verb===
+===Etymolgy===cop, verb  from capere, Latin and Old French 
+capere: to capture. 
 # Used colloquially to take, especially fraudulently, as in "copping a plea" (referring to a [[felon]] taking the offer of [[prosecutor]]s to reduced charges, pleading guilty to a [[misdemeanor]], saving the government the [[inconvenience]] and expense of a [[trial]]).
+
 ==Slovak==
 === Noun ===
 :'''cop''' ''m'', '''copy''' ''pl''
