--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -1,12 +1,13 @@
 ==English==
 ===Noun===
-===Etymolgy===
+===Etymology===
 short for copper,because early [[NYPD]] outfits had copper buttons
 # (slang) [[Police]] officer.
 ====Translations====
 *{{sk}}: [[poliš]] ''m'', [[hekáč]] ''m''
 ===Verb===
-===Etymolgy===cop, verb  from capere, Latin and Old French 
+===Etymology===
+cop, verb  from capere, Latin and Old French 
 capere: to capture. 
 # Used colloquially to take, especially fraudulently, as in "copping a plea" (referring to a [[felon]] taking the offer of [[prosecutor]]s to reduced charges, pleading guilty to a [[misdemeanor]], saving the government the [[inconvenience]] and expense of a [[trial]]).
 
