--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -15,6 +15,7 @@
 
 ====Translations====
 *[[Dutch]]: [[buigen]], [[plooien]] <!-- not checked -->
+*French: courber
 *[[Hungarian]]: [[hajlít]] (1), [[görbít]] (1)
 *[[Indonesian]]: [[bengkok|membengkokkan]], [[belok|membelokkan]], [[tekuk|menekuk]] <!-- not checked -->
 *[[Japanese]]: [[曲げる]] ([[まげる]], mageru) <!-- not checked -->
