fmt; wikification; fix translations; improve pronunciation; mark as stub <ferret#132952>

--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -1,64 +1,60 @@
+==English==
 === Pronunciation ===
-*[[w:IPA|IPA]]: /'fəɽɛt/
+*fĕr'ət, /ˈferət/, /<tt>"fer@t<tt>/
 
 === Noun ===
+'''ferret''' ([[ferrets]])
 
-'''ferret'''
+# a type of [[animal]]. {{stub}}
 
-# [[animal]]
+====Scientific names====
+*[[Mustela putorius furo]]
 
-=== Translations ===
-
-*[[Albanian]]: [[qelbësi]]
+==== Translations ====
+*Albanian: [[qelbësi]]
 *[[Basque]]: [[hudo]]
-*[[Belarussian]]: [[тхор афрыканскі]]
-*[[Bosnian]]: [[lasica]] ''f''
+*Belarusian: [[тхор афрыканскі]]
+*Bosnian: [[lasica]] ''f''
 *[[Breton]]: [[fured]]
-*[[Bulgarian]]: [[пор]] ([[por]])
+*Bulgarian: [[пор]] (por)
 *[[Catalan]]: [[furó]]
-*[[Croatian]]: [[tvor]]
-*[[Czech]]: [[fretka]]
+*Croatian: [[tvor]]
+*Czech: [[fretka]]
 *Danish: [[fritte]] ''c''
-*[[Dutch]]: [[fret]] ''m''
+*Dutch: [[fret]] ''m''
 *[[Esperanto]]: [[furo]]
-*[[Estonian]]: [[tuhkur]], [[tőhk]]
-*[[Faroese]]: [[]]
-*[[Finnish]]: [[fretti]]
-*[[French]]: [[furet]] ''m''
+*Estonian: [[tuhkur]], [[tőhk]]
+*Finnish: [[fretti]]
+*French: [[furet]] ''m''
 *[[Frisian]]: [[fret]]
 *[[Friulian]]: [[pudîs blanc]]
 *[[Gallegan]]: [[furón]]
-*[[German]]: [[Frettchen]] ''n''
-*[[Greek]]: [[κουνάβι]], [[νυφίτσα]] '' ''
-*[[Hungarian]]: [[vadászgörény]]
-*[[Indonesian]]: [[]]
+*German: [[Frettchen]] ''n''
+*Greek: [[κουνάβι]], [[νυφίτσα]]
+*Hungarian: [[vadászgörény]]
 *[[Irish]]: [[cat coille]], [[toghán]]
-*[[Italian]]: [[furetto]] ''m''
-*[[Japanese]]: [[]] ([[]], )
-*[[Ladin]]: [[]]
-*[[Latin]]: [[Mustela putorius furo]] '' ''
-*[[Latvian]]: [[okšķeris]]
-*[[Lithuanian]]: [[fredka]]
-*[[Macedonian]]: [[твор]] ([[tvor]])
-*[[Maltese]]: [[nemes]]
-*[[Norwegian]]: [[frett]]
+*Italian: [[furetto]] ''m''
+*Latvian: [[okšķeris]]
+*Lithuanian: [[fredka]]
+*Macedonian: [[твор]] (tvor)
+*Maltese: [[nemes]]
+*Norwegian: [[frett]]
 *[[Occitan]]: [[fura]]
-*[[Polish]]: [[fretka]] '' ''
-*[[Portuguese]]: [[furăo]]
-*[[Romanian]]: [[nevăstuică]]
+*Polish: [[fretka]]
+*Portuguese: [[furăo]]
+*Romanian: [[nevăstuică]]
 *[[Romansh]]: [[furet]]
-*[[Romany]]: [[]]
-*[[Russian]]: [[хорёк африканский]] ([[horjok afrikanskij]]) '' ''
+*Russian: [[хорёк африканский]] (horjok afrikanskij)
 *[[Sami]]: [[albinočáhppesbuoidda]], [[ferrehtta]]
 *[[Sardinian]]: [[furittu]], [[fughittu]]
 *[[Scottish]]: [[fearaid]]
-*[[Serbian]]: [[твор]] ([[tvor]])
-*[[Slovak]]: [[Fretka tchorovitá]]
-*[[Slovenian]]: [[beli dihur]] ''m''
-*[[Spanish]]: [[hurón]] ''m''
-*[[Swedish]]: [[tamiller]]
-*[[Turkish]]: [[yaban/dağ gelinciği]]
-*[[Ukrainian]]: [[тхiр африканский]] ([[thir afrikanskij]])
+*Serbian: [[твор]] ([[tvor]])
+*Slovak: [[Fretka tchorovitá]]
+*Slovenian: [[beli dihur]] ''m''
+*Spanish: [[hurón]] ''m''
+*Swedish: [[tamiller]]
+*Turkish: [[yaban]], [[dağ gelinciği]]
+*Ukrainian: [[тхiр африканский]] ([[thir afrikanskij]])
 *[[Upper Sorbian]]: [[łasyčka]]
 *[[Welsh]]: [[ffured]]
 
