--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -43,6 +43,7 @@
 
 ==== Translations ====
 *[[Finnish]]: [[puhaltaa]] (1,4), [[tuhlata]] (2), [[ottaa suihin]] (3)
+*French: [[tailler]] la [[pipe]] (3)
 
 === Noun ===
 
