/* Translations */ verlan <pig#147198>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -144,6 +144,8 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*French: [[flic]]
+*Verlan: [[ceuf]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
