/* Translations */ +sur (eo) <at#154665>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -29,7 +29,7 @@
 *Czech: [[u]]
 *{{da}}: [[på]]
 *Dutch: [[op]] (1), [[om]] (2)
-*[[Esperanto]]: [[al]] (1), [[je]] (2)
+*[[Esperanto]]: [[sur]] (1), [[je]] (2), [[al]] (3)
 *Finnish: [[-lla]] / [[-llä]] ''(adessive case)'' (1); [[-ssa]] / [[-ssä]] ''(inessive case)'' (1); [[-lta]] / [[-ltä]] ''(ablative case)'' (2); [[-na]] / [[-nä]] ''(essive case)'' (2); [[-lle]] ''(allative case)'' (3); [[kohti]] (3)
 *French: [[à]] (1,2)
 *German: [[an]] (1), [[auf]] (1), [[bei]] (1), [[in]] (1), [[um]] (2), [[nach]] (3), [[zu]] (3)
