robot  Adding:fr,pl <division#158326>

--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -21,3 +21,6 @@ From Latin '''[[divisio]]''', noun of process form from perfect passive particip
 ====Related words====
 *[[divide]]
 *[[divisional]]
+
+[[fr:division]]
+[[pl:Division]]
