--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -23,6 +23,7 @@ IPA: [[WEAE]] /ðɛn/
 
 === Translations ===
 *[[Chinese]]: [[然后]],[[而后]]
+*[[Esperanto]]: [[tiam]] (1&ndash;4, ''noun''), [[tamen]] (5)
 *[[Finnish]]: [[silloin]] (1), [[sitten]] (2, 3), [[niin]] (4), [[toisaalta]] (5)
 *[[Indonesian]]: [[maka]] (if-then), [[kemudian]], [[lalu]], [[setelah itu]], [[selanjutnya]], [[berikutnya]]
 *[[Japanese]]: [[それから]] (sorekara), [[その後]] (sono ato, sono go), [[次]] ([[つぎ]], tsugi)
