--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -50,3 +50,5 @@ Latin: ''species'' [[view]]; [[appearance]]; [[vision]]; [[dream]]; [[semblance]
 *[[race]]
 *[[variety]]
 *[[binomial nomenclature]]
+
+[[de:species]]
