--- a/en/m/mania.34111.wikitext
+++ b/en/m/mania.34111.wikitext
@@ -23,3 +23,6 @@ Latin [[mania]], from Greek [[μανία]] (''mania'') "madness".
 *[[manic]]
 *[[maniac]]
 *[[megalomania]]
+
+[[it:mania]]
+[[pl:Mania]]
