--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -21,6 +21,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 *Italian: [[moltiplicazione]] ''f''
 *Japanese: [[掛け算]] (かけざん), [[乗法]] (じょうほう)
 *Polish: [[mnożenie]] ''n''
+*{{ru}}: [[умножение]]
 *Spanish: [[multiplicación]] ''f''
 
 ====Related terms====
