--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -1,3 +1,6 @@
-A broken or nonfunctional device that does not perform its intended function.  Related to [[dummy]], except that a dummy is intended to be nonfunctional.
-
+{{-en-}}
+{{-etym-}}
+Ultimately ''dudde''- ragged clothing ''(of uncertain origin, 1500's)''
+{{-noun-}}
+# A broken or nonfunctional device that does not perform its intended function, such as a [[bomb]]
 [[it:dud]]
