--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -25,3 +25,4 @@ From Persian ''p&aelig;'' meaning "leg" and ''jama'' meaning "clothing".
 
 
 <!-- NOTE: If you edit this page, please also edit "pyjamas" -->
+[[Category:Hindi derivations]]
